--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
-    <div class="row justify-content-center">
+<body style="overflow-x: hidden !important;">
+    <div class="row justify-content-center my-5">
         <h1 class="text-center">{% block header %}{% endblock %}</h1>
     </div>
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 
 </html>
